# mx6502

./: Cargo.toml  README.md
assembler/: Cargo.toml
assembler/src/: lib.rs
model/: Cargo.toml
model/src/: debug.rs  lib.rs  status.rs
