[package]
name = "portal-solutions-mos6502-model"
description = "MOS6502 hardware model"
version = "0.2.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
edition = "2021"
homepage = "https://gitlab.com/gridbugs/mos6502.git"
repository = "https://gitlab.com/gridbugs/mos6502.git"
documentation = "https://docs.rs/portal-solutions-mos6502-model"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
log = "0.4"
