[package]
name = "portal-solutions-mos6502-model"
description = "MOS6502 hardware model"
version = "0.0.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>","gkgoat"]
license = "MIT"
readme = "README.md"
edition = "2021"
homepage = "https://github.com/portal-co/mx6502.git"
repository = "https://github.com/portal-co/mx6502.git"
documentation = "https://docs.rs/portal-solutions-mos6502-model"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive","alloc"],default-features = false, optional = true }
log = "0.4"
